--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -49,6 +49,19 @@ header {
             margin-left: 20px;
         }
 
+        .photo-link {
+            position: absolute;
+            width: 49%;
+            height: 50px;
+            margin-left: 30px;
+            text-align: center;
+            color: #FFF;
+            background: rgba($color: #000000, $alpha: 0.4)
+            
+            
+        }
+        
+
         ul>li>a>img {
             width: 75%;
             margin: 30px;
@@ -73,8 +86,6 @@ header {
             margin-bottom: 10px;
         }
 
-        .clickable {
-            // margin: 10px;
-        }
+        
     }
 }
