--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,115 +5,263 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2.5em;
+    background-color: #000;
+    color: #FFF;
     
-}
-
-header {
-    height: 90px;
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;
-    background-color: rgba($color: #000000, $alpha: 0.2);
-    border-bottom: 1px solid black;
-}
 
 
-
-.search {
-    display: flex;
-    justify-content: flex-end;
-    border-bottom: 2px solid black;
-    flex: 1;
-
-    button {
-       padding: 25px;
-       background-color: rgba($color: #000000, $alpha: 0.2);
-       border-radius: 5px;
-       
+    header {
+        height: 90px;
+        padding-top: 10px;
+        display: flex;
+        justify-content: center;
+        background-color: hsla(0, 0%, 0%, 0.74);
+        border-bottom: 1px solid black;
     }
 
-    
-}
 
-#error {
-    display: none;
-    width: 100%;
-    height: 50px;
-    padding-top: 10px;
-    background-color: hsla(0, 100%, 50%, 0.507);
-    text-align: center;
-}
-.main-content {
-    display: flex;
 
-    
-    .results {
-        flex: 8;
-        height: auto;
+    .search {
+        display: flex;
+        justify-content: flex-end;
+        border-bottom: 2px solid black;
+        width: 30%;
+        background-color: hsla(0, 0%, 100%, 0.212);
 
-        ul {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            li {
-                width: 100%;
-                height: 350px;
-                background-repeat: no-repeat;
-                background-position: center center;
-                background-size: cover;
-                border-bottom: 8px solid #000;
-                display: flex;
-
-                .owner-link {
-                    position: absolute;
-                    width: 30%;
-                    height: auto;
-                    border-radius: 5px;
-                    padding-top: 10px;
-                    padding-bottom: 10px;
-                    text-align: center;
-                    color: #FFF;
-                    background: rgba($color: #000000, $alpha: 0.4)
-                    
-                    
-                }
-
-                .photo-link {
-                    margin-top: 300px;
-                    padding-top: 10px;
-                    text-align: center;
-                    width: 100%;
-                    color: #FFF;
-                    background: rgba($color: #000000, $alpha: 0.4);
-                }
-            }
-        }
-
-        .no-photo-p {
-            margin-left: 20px;
-        }
-
-        .no-photo-img {
-            margin-top: 20px;
-            margin-left: 20px;
-        }
+        button {
+        padding: 25px;
+        background-color: rgba($color: #000000, $alpha: 0.2);
+        border-radius: 5px;
         
+        }
+
         
     }
 
     .side {
-        flex: 4;
-        margin-left: 30px;
-        margin-top: 10px;
+        display: flex;
 
-        ul>li {
+        .synonym-ul {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
             margin: 10px;
+            flex-wrap: wrap;
 
-            &:hover {
-                cursor: pointer;
-                
+            li {
+                margin-left: 10px;
+                margin-top: 10px;
+                padding-right: 10px;
+                border-right: 2px solid #FFF;
+
+                &:hover {
+                    cursor: pointer;
+                    color: grey;
+                    
+                }
             }
         }
+        
+    }
+
+    #error {
+        display: none;
+        width: 100%;
+        height: 50px;
+        padding-top: 10px;
+        background-color: hsla(0, 100%, 50%, 0.507);
+        text-align: center;
+    }
+
+    .main-content {
+        display: flex;
+
+        
+        .results {
+            flex: 8;
+            height: auto;
+            
+            
+            .no-photo-p {
+                margin-left: 20px;
+            }
+            
+            .no-photo-img {
+                margin-top: 20px;
+                margin-left: 20px;
+            }
+
+            .container {
+                display: flex; 
+                flex-direction: column;
+                flex-wrap: wrap;
+                height: 100vw;
+                max-height: 800px;
+                color: #FFF;
+                width: 100%;
+            
+            
+            .column {
+                
+                width: 25%;
+
+                    .contrast {
+                        -webkit-filter: contrast(150%);
+                        filter: contrast(150%);
+                    }
+
+                    
+
+                    .owner-link {
+                        display: none;
+                        width: 50%;
+                        background-color: rgba(0, 0, 0, 0.4);
+                        color: #FFF;
+                        padding: 10px;
+
+                        
+                    }
+
+                    .photo-link {
+                        display: none;
+                        width: 50%;
+                        background-color: rgba(0, 0, 0, 0.4);
+                        color: #FFF;
+                        padding: 10px;
+
+                    }
+
+                    .item1 {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: flex-end;
+                        
+                        width: 100%;
+                        height: 450px;
+                        background-repeat: no-repeat;
+                        background-position: center center;
+                        background-size: cover;
+                        transition: all .5s;
+
+                        &:hover {
+                            transform: scale(1.03);
+                            
+                        }
+
+                        &:focus {
+                            transform: scale(1.03);
+                        }
+                        
+                        &:hover .photo-link {
+                            display: block;
+                        }
+
+                        &:hover .owner-link {
+                            display: block;
+                        }
+                    }
+            
+                    .item2 {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: flex-end;
+                        
+                        
+                        width: 100%;
+                        height: 350px;
+                        background-repeat: no-repeat;
+                        background-position: center center;
+                        background-size: cover;
+                        transition: all .5s;
+
+                        &:hover {
+                            transform: scale(1.03);
+                            
+                        }
+
+                        &:focus {
+                            transform: scale(1.03);
+                        }
+                        
+                        &:hover .photo-link {
+                            display: block;
+                        }
+
+                        &:hover .owner-link {
+                            display: block;
+                        }
+                        
+                    }
+            
+                    .item3 {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: flex-end;
+                        
+                        
+                        width: 100%;
+                        height: 400px;
+                        
+                        background-repeat: no-repeat;
+                        background-position: center center;
+                        background-size: cover;
+                        transition: all .5s;
+
+                        &:hover {
+                            transform: scale(1.03);
+                            
+                        }
+
+                        &:focus {
+                            transform: scale(1.03);
+                        }
+                        
+                        &:hover .photo-link {
+                            display: block;
+                        }
+
+                        &:hover .owner-link {
+                            display: block;
+                        }
+                    }
+            
+                    .item4 {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: flex-end;
+                        
+                        
+                        width: 100%;
+                        height: 300px;
+                        background-repeat: no-repeat;
+                        background-position: center center;
+                        background-size: cover;
+                        transition: all .5s;
+
+                        &:hover {
+                            transform: scale(1.03);
+                            
+                        }
+
+                        &:focus {
+                            transform: scale(1.03);
+                        }
+
+                        &:hover .photo-link {
+                            display: block;
+                        }
+
+                        &:hover .owner-link {
+                            display: block;
+                        }
+                        
+                    }
+            
+                }
+            
+            }
+        }
+        
         
     }
 }
