--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,267 +1,254 @@
 //Reset
-@import 'reset';
-
+@import "reset";
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2.5em;
-    background-color: #000;
-    color: #FFF;
-    
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2.5em;
+  background-color: #000;
+  color: #fff;
 
+  header {
+    height: 90px;
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    background-color: hsla(0, 0%, 0%, 0.74);
+    border-bottom: 1px solid black;
+  }
 
-    header {
-        height: 90px;
-        padding-top: 10px;
-        display: flex;
-        justify-content: center;
-        background-color: hsla(0, 0%, 0%, 0.74);
-        border-bottom: 1px solid black;
+  .search {
+    display: flex;
+    justify-content: flex-end;
+    border-bottom: 2px solid black;
+    width: 30%;
+    background-color: hsla(0, 0%, 100%, 0.212);
+
+    button {
+      padding: 25px;
+      background-color: rgba($color: #000000, $alpha: 0.2);
+      border-radius: 5px;
     }
+  }
 
+  .side {
+    display: flex;
+    margin-bottom: 30px;
 
+    .synonym-ul {
+      display: flex;
+      width: 100%;
+      justify-content: space-around;
+      margin: 10px;
+      flex-wrap: wrap;
 
-    .search {
-        display: flex;
-        justify-content: flex-end;
-        border-bottom: 2px solid black;
-        width: 30%;
-        background-color: hsla(0, 0%, 100%, 0.212);
+      li {
+        margin-left: 10px;
+        margin-top: 10px;
+        padding-right: 10px;
+        border-right: 2px solid #fff;
 
-        button {
-        padding: 25px;
-        background-color: rgba($color: #000000, $alpha: 0.2);
-        border-radius: 5px;
-        
+        &:hover {
+          cursor: pointer;
+          color: grey;
         }
-
-        
+      }
     }
+  }
 
-    .side {
+  #error {
+    display: none;
+    width: 100%;
+    height: 50px;
+    padding-top: 10px;
+    background-color: hsla(0, 100%, 50%, 0.507);
+    text-align: center;
+  }
+
+  .main-content {
+    display: flex;
+
+    .results {
+        flex: 1;
         display: flex;
+        flex-direction: column;
+        align-items: center;
 
-        .synonym-ul {
-            display: flex;
-            width: 100%;
-            justify-content: space-around;
-            margin: 10px;
-            flex-wrap: wrap;
-
-            li {
-                margin-left: 10px;
-                margin-top: 10px;
-                padding-right: 10px;
-                border-right: 2px solid #FFF;
-
-                &:hover {
-                    cursor: pointer;
-                    color: grey;
-                    
-                }
-            }
-        }
-        
-    }
-
-    #error {
+      .loader {
         display: none;
-        width: 100%;
-        height: 50px;
-        padding-top: 10px;
-        background-color: hsla(0, 100%, 50%, 0.507);
-        text-align: center;
-    }
-
-    .main-content {
-        display: flex;
-
-        
-        .results {
-            flex: 8;
-            height: auto;
-            
-            
-            .no-photo-p {
-                margin-left: 20px;
-            }
-            
-            .no-photo-img {
-                margin-top: 20px;
-                margin-left: 20px;
-            }
-
-            .container {
-                display: flex; 
-                flex-direction: column;
-                flex-wrap: wrap;
-                height: 100vw;
-                max-height: 800px;
-                color: #FFF;
-                width: 100%;
-            
-            
-            .column {
-                
-                width: 25%;
-
-                    .contrast {
-                        -webkit-filter: contrast(150%);
-                        filter: contrast(150%);
-                    }
-
-                    
-
-                    .owner-link {
-                        display: none;
-                        width: 50%;
-                        background-color: rgba(0, 0, 0, 0.4);
-                        color: #FFF;
-                        padding: 10px;
-
-                        
-                    }
-
-                    .photo-link {
-                        display: none;
-                        width: 50%;
-                        background-color: rgba(0, 0, 0, 0.4);
-                        color: #FFF;
-                        padding: 10px;
-
-                    }
-
-                    .item1 {
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: flex-end;
-                        
-                        width: 100%;
-                        height: 450px;
-                        background-repeat: no-repeat;
-                        background-position: center center;
-                        background-size: cover;
-                        transition: all .5s;
-
-                        &:hover {
-                            transform: scale(1.03);
-                            
-                        }
-
-                        &:focus {
-                            transform: scale(1.03);
-                        }
-                        
-                        &:hover .photo-link {
-                            display: block;
-                        }
-
-                        &:hover .owner-link {
-                            display: block;
-                        }
-                    }
-            
-                    .item2 {
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: flex-end;
-                        
-                        
-                        width: 100%;
-                        height: 350px;
-                        background-repeat: no-repeat;
-                        background-position: center center;
-                        background-size: cover;
-                        transition: all .5s;
-
-                        &:hover {
-                            transform: scale(1.03);
-                            
-                        }
-
-                        &:focus {
-                            transform: scale(1.03);
-                        }
-                        
-                        &:hover .photo-link {
-                            display: block;
-                        }
-
-                        &:hover .owner-link {
-                            display: block;
-                        }
-                        
-                    }
-            
-                    .item3 {
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: flex-end;
-                        
-                        
-                        width: 100%;
-                        height: 400px;
-                        
-                        background-repeat: no-repeat;
-                        background-position: center center;
-                        background-size: cover;
-                        transition: all .5s;
-
-                        &:hover {
-                            transform: scale(1.03);
-                            
-                        }
-
-                        &:focus {
-                            transform: scale(1.03);
-                        }
-                        
-                        &:hover .photo-link {
-                            display: block;
-                        }
-
-                        &:hover .owner-link {
-                            display: block;
-                        }
-                    }
-            
-                    .item4 {
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: flex-end;
-                        
-                        
-                        width: 100%;
-                        height: 300px;
-                        background-repeat: no-repeat;
-                        background-position: center center;
-                        background-size: cover;
-                        transition: all .5s;
-
-                        &:hover {
-                            transform: scale(1.03);
-                            
-                        }
-
-                        &:focus {
-                            transform: scale(1.03);
-                        }
-
-                        &:hover .photo-link {
-                            display: block;
-                        }
-
-                        &:hover .owner-link {
-                            display: block;
-                        }
-                        
-                    }
-            
-                }
-            
-            }
+        border: 8px solid #f3f3f3; 
+        border-top: 8px solid hsla(9, 58%, 45%, 0.767);
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 1s linear infinite;
         }
-        
-        
+    
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+      .no-photo-p {
+        margin-left: 20px;
+      }
+
+      .no-photo-img {
+        margin-top: 20px;
+        margin-left: 20px;
+      }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: 100vw;
+        max-height: 800px;
+        color: #fff;
+        width: 100%;
+        margin-top: 30px;
+
+        .column {
+          width: 25%;
+
+          .contrast {
+            -webkit-filter: contrast(150%);
+            filter: contrast(150%);
+          }
+
+          .owner-link {
+            display: none;
+            width: 50%;
+            background-color: rgba(0, 0, 0, 0.4);
+            color: #fff;
+            padding: 10px;
+          }
+
+          .photo-link {
+            display: none;
+            width: 50%;
+            background-color: rgba(0, 0, 0, 0.4);
+            color: #fff;
+            padding: 10px;
+          }
+
+          .item1 {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+
+            width: 100%;
+            height: 450px;
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            transition: all 0.5s;
+
+            &:hover {
+              transform: scale(1.03);
+            }
+
+            &:focus {
+              transform: scale(1.03);
+            }
+
+            &:hover .photo-link {
+              display: block;
+            }
+
+            &:hover .owner-link {
+              display: block;
+            }
+          }
+
+          .item2 {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+
+            width: 100%;
+            height: 350px;
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            transition: all 0.5s;
+
+            &:hover {
+              transform: scale(1.03);
+            }
+
+            &:focus {
+              transform: scale(1.03);
+            }
+
+            &:hover .photo-link {
+              display: block;
+            }
+
+            &:hover .owner-link {
+              display: block;
+            }
+          }
+
+          .item3 {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+
+            width: 100%;
+            height: 400px;
+
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            transition: all 0.5s;
+
+            &:hover {
+              transform: scale(1.03);
+            }
+
+            &:focus {
+              transform: scale(1.03);
+            }
+
+            &:hover .photo-link {
+              display: block;
+            }
+
+            &:hover .owner-link {
+              display: block;
+            }
+          }
+
+          .item4 {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+
+            width: 100%;
+            height: 300px;
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            transition: all 0.5s;
+
+            &:hover {
+              transform: scale(1.03);
+            }
+
+            &:focus {
+              transform: scale(1.03);
+            }
+
+            &:hover .photo-link {
+              display: block;
+            }
+
+            &:hover .owner-link {
+              display: block;
+            }
+          }
+        }
+      }
     }
+  }
 }
