--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -68,25 +68,29 @@ body {
     display: flex;
 
     .results {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
       .loader {
         display: none;
-        border: 8px solid #f3f3f3; 
+        border: 8px solid #f3f3f3;
         border-top: 8px solid hsla(9, 58%, 45%, 0.767);
         border-radius: 50%;
         width: 120px;
         height: 120px;
         animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
         }
-    
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        100% {
+          transform: rotate(360deg);
         }
+      }
 
       .no-photo-p {
         margin-left: 20px;
@@ -121,6 +125,7 @@ body {
             background-color: rgba(0, 0, 0, 0.4);
             color: #fff;
             padding: 10px;
+            transition: all 5s;
           }
 
           .photo-link {
@@ -129,6 +134,7 @@ body {
             background-color: rgba(0, 0, 0, 0.4);
             color: #fff;
             padding: 10px;
+            transition: all 5s;
           }
 
           .item1 {
@@ -153,10 +159,23 @@ body {
 
             &:hover .photo-link {
               display: block;
+              animation: slide-up 0.5s ease-out;
             }
 
             &:hover .owner-link {
               display: block;
+              animation: slide-up 0.5s ease-out;
+            }
+
+            @keyframes slide-up {
+              0% {
+                opacity: 0;
+                transform: translateY(100%);
+              }
+              100% {
+                opacity: 1;
+                transform: translateY(0);
+              }
             }
           }
 
@@ -182,10 +201,23 @@ body {
 
             &:hover .photo-link {
               display: block;
+              animation: slide-up 0.5s ease-out;
             }
 
             &:hover .owner-link {
               display: block;
+              animation: slide-up 0.5s ease-out;
+            }
+
+            @keyframes slide-up {
+              0% {
+                opacity: 0;
+                transform: translateY(100%);
+              }
+              100% {
+                opacity: 1;
+                transform: translateY(0);
+              }
             }
           }
 
@@ -212,10 +244,23 @@ body {
 
             &:hover .photo-link {
               display: block;
+              animation: slide-up 0.5s ease-out;
             }
 
             &:hover .owner-link {
               display: block;
+              animation: slide-up 0.5s ease-out;
+            }
+
+            @keyframes slide-up {
+              0% {
+                opacity: 0;
+                transform: translateY(100%);
+              }
+              100% {
+                opacity: 1;
+                transform: translateY(0);
+              }
             }
           }
 
@@ -241,10 +286,23 @@ body {
 
             &:hover .photo-link {
               display: block;
+              animation: slide-up 0.5s ease-out;
             }
 
             &:hover .owner-link {
               display: block;
+              animation: slide-up 0.5s ease-out;
+            }
+
+            @keyframes slide-up {
+              0% {
+                opacity: 0;
+                transform: translateY(100%);
+              }
+              100% {
+                opacity: 1;
+                transform: translateY(0);
+              }
             }
           }
         }
